MODORDERS-439 Implement re-encumber orders logic