@@ -36,28 +36,31 @@ public class FundService {
   }
 
   public CompletableFuture<List<Fund>> getAllFunds(Collection<String> fundIds, RequestContext requestContext) {
-    return collectResultsOnSuccess(ofSubLists(new ArrayList<>(fundIds), MAX_IDS_FOR_GET_RQ)
-      .map(ids -> getAllFundsByIds(ids, requestContext))
-      .toList())
-      .thenApply(lists -> lists.stream().flatMap(Collection::stream)
-      .collect(Collectors.toList()));
+    return collectResultsOnSuccess(
+        ofSubLists(new ArrayList<>(fundIds), MAX_IDS_FOR_GET_RQ).map(ids -> getAllFundsByIds(ids, requestContext))
+          .toList()).thenApply(
+              lists -> lists.stream()
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList()));
   }
 
-    public CompletableFuture<List<Fund>> getFunds(Collection<String> fundIds, RequestContext requestContext) {
-        return collectResultsOnSuccess(ofSubLists(new ArrayList<>(fundIds), MAX_IDS_FOR_GET_RQ)
-                .map(ids -> getFundsByIds(ids, requestContext))
-                .toList())
-                .thenApply(lists -> lists.stream().flatMap(Collection::stream)
-                        .collect(Collectors.toList()));
-    }
+  public CompletableFuture<List<Fund>> getFunds(Collection<String> fundIds, RequestContext requestContext) {
+    return collectResultsOnSuccess(
+        ofSubLists(new ArrayList<>(fundIds), MAX_IDS_FOR_GET_RQ).map(ids -> getFundsByIds(ids, requestContext))
+          .toList()).thenApply(
+              lists -> lists.stream()
+                .flatMap(Collection::stream)
+                .collect(Collectors.toList()));
+  }
 
-    private CompletableFuture<List<Fund>> getFundsByIds(Collection<String> ids, RequestContext requestContext) {
-        String query = convertIdsToCqlQuery(ids);
-        RequestEntry requestEntry = new RequestEntry(ENDPOINT)
-                .withQuery(query).withLimit(MAX_IDS_FOR_GET_RQ).withOffset(0);
-        return restClient.get(requestEntry, requestContext, FundCollection.class)
-                .thenApply(FundCollection::getFunds);
-    }
+  private CompletableFuture<List<Fund>> getFundsByIds(Collection<String> ids, RequestContext requestContext) {
+    String query = convertIdsToCqlQuery(ids);
+    RequestEntry requestEntry = new RequestEntry(ENDPOINT).withQuery(query)
+      .withLimit(MAX_IDS_FOR_GET_RQ)
+      .withOffset(0);
+    return restClient.get(requestEntry, requestContext, FundCollection.class)
+      .thenApply(FundCollection::getFunds);
+  }
 
   public CompletableFuture<Fund> retrieveFundById(String fundId, RequestContext requestContext) {
     RequestEntry requestEntry = new RequestEntry(BY_ID_ENDPOINT).withId(fundId);
@@ -66,8 +69,10 @@ public class FundService {
       .exceptionally(t -> {
         Throwable cause = t.getCause() == null ? t : t.getCause();
         if (HelperUtils.isNotFound(cause)) {
-          List<Parameter> parameters = Collections.singletonList(new Parameter().withValue(fundId).withKey("funds"));
-          throw new HttpException(404, FUNDS_NOT_FOUND.toError().withParameters(parameters));
+          List<Parameter> parameters = Collections.singletonList(new Parameter().withValue(fundId)
+            .withKey("funds"));
+          throw new HttpException(404, FUNDS_NOT_FOUND.toError()
+            .withParameters(parameters));
         }
         throw new CompletionException(cause);
       });
@@ -75,27 +80,33 @@ public class FundService {
 
   public CompletableFuture<List<Fund>> getFundsByLedgerId(String ledgerId, RequestContext requestContext) {
     String query = String.format(FUNDS_BY_LEDGER_ID_QUERY, ledgerId);
-    RequestEntry requestEntry = new RequestEntry(ENDPOINT)
-            .withQuery(query).withLimit(Integer.MAX_VALUE).withOffset(0);
+    RequestEntry requestEntry = new RequestEntry(ENDPOINT).withQuery(query)
+      .withLimit(Integer.MAX_VALUE)
+      .withOffset(0);
     return restClient.get(requestEntry, requestContext, FundCollection.class)
-                         .thenApply(FundCollection::getFunds);
+      .thenApply(FundCollection::getFunds);
   }
 
   private CompletableFuture<List<Fund>> getAllFundsByIds(Collection<String> ids, RequestContext requestContext) {
     String query = convertIdsToCqlQuery(ids);
-    RequestEntry requestEntry = new RequestEntry(ENDPOINT)
-            .withQuery(query).withLimit(MAX_IDS_FOR_GET_RQ).withOffset(0);
+    RequestEntry requestEntry = new RequestEntry(ENDPOINT).withQuery(query)
+      .withLimit(MAX_IDS_FOR_GET_RQ)
+      .withOffset(0);
     return restClient.get(requestEntry, requestContext, FundCollection.class)
-                         .thenApply(FundCollection::getFunds)
-            .thenApply(funds -> {
-              if (funds.size() == ids.size()) {
-                return funds;
-              }
-              List<Parameter> parameters = ids.stream()
-                      .filter(id -> funds.stream().noneMatch(fund -> fund.getId().equals(id)))
-                      .map(id -> new Parameter().withValue(id).withKey("funds"))
-                      .collect(Collectors.toList());
-              throw new HttpException(404, FUNDS_NOT_FOUND.toError().withParameters(parameters));
-            });
+      .thenApply(FundCollection::getFunds)
+      .thenApply(funds -> {
+        if (funds.size() == ids.size()) {
+          return funds;
+        }
+        List<Parameter> parameters = ids.stream()
+          .filter(id -> funds.stream()
+            .noneMatch(fund -> fund.getId()
+              .equals(id)))
+          .map(id -> new Parameter().withValue(id)
+            .withKey("funds"))
+          .collect(Collectors.toList());
+        throw new HttpException(404, FUNDS_NOT_FOUND.toError()
+          .withParameters(parameters));
+      });
   }
 }
